added color and framebox